# csp_proc

./: Dockerfile  LICENSE  README.md  meson.build  meson_options.txt
.github/workflows/: doxygen.yml  run-tests.yml
include/csp_proc/: proc_analyze.h  proc_client.h  proc_memory.h  proc_mutex.h  proc_pack.h  proc_runtime.h  proc_server.h  proc_store.h  proc_types.h
src/: proc_analyze.c  proc_client.c  proc_pack.c  proc_runtime_FreeRTOS.c  proc_runtime_instructions.c  proc_server.c  proc_store.c
src/platform/: proc_memory_FreeRTOS.c  proc_memory_POSIX.c  proc_mutex_FreeRTOS.c  proc_mutex_POSIX.c
src/runtime/: proc_runtime_FreeRTOS.c  proc_runtime_POSIX.c  proc_runtime_instructions_FreeRTOS.c  proc_runtime_instructions_POSIX.c  proc_runtime_instructions_common.c
src/slash/: slash_csp_proc.c
src/store/: proc_store_dynamic.c  proc_store_static.c
src/sync/: proc_mutex_FreeRTOS.c  proc_mutex_POSIX.c
tests/: test_client_server.c  test_proc_pack.c  test_slash_commands.c
tests/include/csp_proc_test/: csp_network_test_harness.h  slash_test_harness.h
